<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_popupwindow_head_camera"
        style="@style/ButtonOneStyle"
        android:layout_marginTop="50dp"
        android:text="@string/button_popupwindow_head_camera" />

    <Button
        android:id="@+id/button_popupwindow_head_album"
        style="@style/ButtonOneStyle"
        android:text="@string/button_popupwindow_head_album" />

    <Button
        android:id="@+id/button_popupwindow_head_cancle"
        style="@style/ButtonOneStyle"
        android:layout_marginTop="20dp"
        android:text="@string/cancel" />

</LinearLayout>